<resources>
    <string name="app_name">Gasto Viagem</string>
    <string name="distancia">Distância</string>
    <string name="preco">Preço</string>
    <string name="autonomia">Autonomia</string>
    <string name="total_de_quilometros">Total de quilômetros</string>
    <string name="preco_por_litro">Preço por Litro</string>
    <string name="kms_por_litro">KMs por Litro</string>
    <string name="gasto_total">seu gasto total será de:</string>
    <string name="calcular">calcular</string>
    <string name="valor_total_rs">R$ 0</string>
    <string name="preencha_todos_campos">Preencha todos os campos</string>
    <string name="informe_valores_validos">Por favor, informa  valores válidos.</string>
</resources>